Update canvas border color. Fix auto hiding navbar on mobile. Make things better on mobile in general through media queries.

--- a/sass-stylesheets/_nav.sass
+++ b/sass-stylesheets/_nav.sass
@@ -52,6 +52,8 @@ hr
 #nav-bar
   background-color: $nav-bar-color
   position: fixed
+  @media screen and (max-width: $break-small)
+    position: static  
   top: 0
   right: 0
   left: 0
