--- a/sass-stylesheets/home.sass
+++ b/sass-stylesheets/home.sass
@@ -3,6 +3,7 @@
 
 body
   min-width: 670px // for canvas width
+  background-size: cover
 
 .main-content
   margin-bottom: 20px
@@ -16,6 +17,7 @@ h2#shimmer-name
   text-align: center
   @media screen and (max-width: $break-small)
     font-size: 1.5em
+    margin-top: 50px
 
 #sub-title-text
   color: #fcfcfc
@@ -26,7 +28,7 @@ h2#shimmer-name
   font-size: 120%
 
 canvas
-  border: 1px solid #999
+  border: 1px solid #ddd
   padding-left: 0
   padding-right: 0
   margin-left: auto
